@@ -1,1 +1,0 @@
-Main-Class: cx.ath.matthew.salliere.Salliere
