@@ -4,3 +4,5 @@
  * support adjusted scores
  * gsalliere
    - adding rows / creating new maps
+   - save button
+   - disable menu entries and save button when they can't be used
